site/ts/elements/daily-timetable/period.css
:host {
    position: relative;

    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1.2rem;

    width: 100%;

    box-sizing: border-box;
    padding: 0.5rem;

    border-radius: 0.5rem;
}

:host(:hover) {
    background-color: var(--surface3);
}

:host(.cancelled) {
    text-decoration: line-through;
}

.subtitle {
    font-size: 0.6rem;
}

.changed {
    color: var(--text2);
}

next-indicator {
    position: absolute;
    left: -1rem;
}

